<?xml version="1.0"?>
<package>
  <name>dvrk_msgs</name>
  <version>0.0.0</version>
  <description>The dvrk_msgs package</description>


  <maintainer email="rbe-501-virfix@todo.todo">rbe-501-virfix</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
